# api/controllers/member.controller.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"go.uber.org/zap"
 
+	"project-management/models"
 	"project-management/services"
 )
 
@@ -31,16 +32,44 @@ func NewMemberController(
 // @Success 200 {object} models.GetMemberResponse
 // @Router  /members/{id} [get]
 func (c *MemberController) GetMember(ctx *fiber.Ctx) error {
-	id, err := ctx.ParamsInt("id")
+	req := &models.IDRequest{}
+
+	if err := ctx.ParamsParser(req); err != nil {
+		c.logger.Error("GetMember", zap.Error(err))
+		return err
+	}
+
+	resp, err := c.memberService.GetMember(ctx.Context(), req)
 
 	if err != nil {
 		c.logger.Error("GetMember", zap.Error(err))
 		return err
 	}
 
-	resp, err := c.memberService.GetMember(ctx.Context(), id)
+	return ctx.JSON(resp)
+}
+
+// ListMembers
+// @Summary List members
+// @Tags    Member
+// @Accept  json
+// @Produce json
+// @Param   page query    int false "Page" default(1)
+// @Param   size query    int false "Size" default(20)
+// @Success 200  {object} models.ListMembersResponse
+// @Router  /members [get]
+func (c *MemberController) ListMembers(ctx *fiber.Ctx) error {
+	req := &models.ListMembersRequest{}
+
+	if err := ctx.QueryParser(req); err != nil {
+		c.logger.Error("ListMembers", zap.Error(err))
+		return err
+	}
+
+	resp, err := c.memberService.ListMembers(ctx.Context(), req.Norm())
 
 	if err != nil {
+		c.logger.Error("ListMembers", zap.Error(err))
 		return err
 	}
 
